feature:userfollowing class created and displayed on django admin

--- a/letsconnect/templates/feeds/feed_form.html
+++ b/letsconnect/templates/feeds/feed_form.html
@@ -4,4 +4,9 @@
         {{ form.as_p }}
         <input type="submit" name="POST" class="btn btn-primary mb-5"></input>
     </form>
+    {% if form.errors %}
+        <div class="alert alert-danger my-5">
+            {{ form.errors.title.as_text }}
+        </div>
+    {% endif %}
 {% endblock %}
