--- a/letsconnect/templates/user/logout.html
+++ b/letsconnect/templates/user/logout.html
@@ -4,7 +4,7 @@ Logout
 {% endblock %}
 {% block content %}
 
-    <div class="my-5 border round text-dark alert">
+    <div class="my-5 border round text-dark alert" style="background-color: wheat;">
 
         <h1 class="my-5"> Hope to see you soon! </h1>
         <div class="my-5"><a href="{% url 'login' %}" class="btn btn-primary mb-5">Click here to login again </a>
