--- a/letsconnect/static/templates/base_navbar.html
+++ b/letsconnect/static/templates/base_navbar.html
@@ -2,27 +2,34 @@
 <html>
     <head>
         <title>{% block title %}{% endblock%}</title>
-        <!--  <link rel="stylesheet" type="text/css" href="{% static -->
-             <!-- 'css/style.css' %}" /> --> 
+         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" /> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     </head>
-    <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <nav class="navbar navbar-dark bg-dark">
-            <div class="ms-auto">
-                {% if user.is_authenticated %}
-                <a href="{% url 'feed.list' %}" class="btn btn-outline-light me-1">home</a>
-                <a href="{% url 'list' %}" class="btn btn-outline-light me-1">List Users</a>
-                <a href="{% url 'logout' %}" class="btn btn-outline-light me-1">Logout</a>
-                {% else %}
-                    <a href="{% url 'register' %}" class="btn btn-outline-light me-1">Sign up</a>
-                    <a href="{% url 'login' %}" class="btn btn-outline-light me-1">Sign in</a>
-                {% endif %}
+    <!-- <body style="background-image: url({# static 'img/bg-4.jpg' #})"> -->
+        <body style="background-color: rosybrown;">
+        <div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+            <nav class="navbar navbar-dark bg-dark">
+                <div class="ms-auto">
+                    {% if user.is_authenticated %}
+                    <a href="{% url 'feed.list' %}" class="btn btn-outline-light me-1">home</a>
+                    <a href="{% url 'feed.create' %}" class="btn btn-outline-light me-1">Post an Update</a>
+                    <form method="post"  style="margin-block-end: 0em;" action="{% url 'search' %}" name="search" class="btn">{%csrf_token%}
+                        <input type="text" name="searchuser" placeholder="Search User" style="margin-block-end: 0em;"/>
+                        <input type="submit" class="btn btn-outline-light me-1" value="Q" style="margin-block-end: 0em;"/>
+                    </form>
+                    <a href="{% url 'logout' %}" class="btn btn-outline-light me-1">Logout</a>
+                    {% else %}
+                        <a href="{% url 'register' %}" class="btn btn-outline-light me-1">Sign up</a>
+                        <a href="{% url 'login' %}" class="btn btn-outline-light me-1">Sign in</a>
+                    {% endif %}
+                </div>
+            </nav>
+
+            <div class=" my-5 container">
+                {% block content %}
+                {% endblock %}
             </div>
-        </nav>
-        <div class=" my-5  text-center container">
-            {% block content %}
-            {% endblock %}
         </div>
     </body>
 </html>
