--- a/letsconnect/templates/user/login.html
+++ b/letsconnect/templates/user/login.html
@@ -7,8 +7,11 @@ Login
 <div class="text-center" style="color: wheat;"><h1>Login</h1></div>
 <div style="background-color: #fdfdfd;; padding:1%;width: fit-content;display: inline-flex;" class="colM" >
     <div>
-        <form method="post" action="{% url 'feed.list' %}">{% csrf_token %}
+        <form method="post">{% csrf_token %}
             {{form.as_p}}
+            {% if request.GET.next %}
+                <input type="hidden" name="to" value="{{ request.GET.next }}"/>
+            {% endif %}
             <input type="submit" class="btn btn-secondary"/>
         </form>
     </div>
