--- a/letsconnect/static/templates/base_navbar.html
+++ b/letsconnect/static/templates/base_navbar.html
@@ -5,8 +5,7 @@
          <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" /> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     </head>
-    <!-- <body style="background-image: url({# static 'img/bg-4.jpg' #})"> -->
-        <body style="background-color: rosybrown;">
+    <body style="background-image: url({# static 'img/bg-4.jpg' #}); background-color: cadetblue;">
         <div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
             <nav class="navbar navbar-dark bg-dark">
