--- a/letsconnect/templates/user/login.html
+++ b/letsconnect/templates/user/login.html
@@ -4,22 +4,22 @@ Login
 {% endblock %}
 
 {% block content %}
-<div class="text-center" style="color: wheat;"><h1>Login</h1></div>
-<div style="background-color: #fdfdfd;; padding:1%;width: fit-content;display: inline-flex;" class="colM" >
-    <div>
-        <form method="post">{% csrf_token %}
-            {{form.as_p}}
-            {% if request.GET.next %}
-                <input type="hidden" name="to" value="{{ request.GET.next }}"/>
-            {% endif %}
-            <input type="submit" class="btn btn-secondary"/>
-        </form>
-    </div>
-</div>
-<div style="color: cornsilk;font-weight: inherit;">Don't have an account with us? <a href="{% url 'register' %}">Register here </a></div>
-{% if form.errors %}
-        <div class="alert alert-danger my-5">
-            {{ form.errors.title.as_text }}
+    <div class="text-center" style="color: cornsilk;"><h1>Login</h1></div>
+    <div style="background-color: cornsilk;; padding:1%;width: fit-content;display: inline-flex;" class="colM" >
+        <div>
+            <form method="post">{% csrf_token %}
+                {{form.as_p}}
+                {% if request.GET.next %}
+                    <input type="hidden" name="to" value="{{ request.GET.next }}"/>
+                {% endif %}
+                <input type="submit" class="btn btn-secondary"/>
+            </form>
         </div>
+    </div>
+    <div style="color: cornsilk;font-weight: inherit;">Don't have an account with us? <a href="{% url 'register' %}">Register here </a></div>
+    {% if form.errors %}
+            <div class="alert alert-danger my-5">
+                {{ form.errors.title.as_text }}
+            </div>
     {% endif %}
 {% endblock %}
